--- a/pom.xml
+++ b/pom.xml
@@ -13,8 +13,9 @@
     <properties>
         <java.version>8</java.version>
         <spring-boot.version>2.3.12.RELEASE</spring-boot.version>
-        <aiflow-spring-boot-starter.version>0.0.1-SNAPSHOT</aiflow-spring-boot-starter.version>
+        <aiflow-spring-boot-starter.version>0.0.2-SNAPSHOTs</aiflow-spring-boot-starter.version>
         <junit.version>4.13.1</junit.version>
+        <lombok.version>1.18.32</lombok.version>
     </properties>
 
     <dependencyManagement>
@@ -48,10 +49,12 @@
                 <artifactId>mysql-connector-java</artifactId>
                 <version>8.0.28</version>
             </dependency>
-
+            <dependency>
+                <groupId>org.projectlombok</groupId>
+                <artifactId>lombok</artifactId>
+                <version>${lombok.version}</version>
+            </dependency>
         </dependencies>
-
-
     </dependencyManagement>
 
     <dependencies>
@@ -131,6 +134,10 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-jdbc</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
         </dependency>
     </dependencies>
 
