--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ a.flow.environmentType=beta
 a.flow.serverConfig.prodDomain=prod
 a.flow.serverConfig.prodBackDomain=back
 a.flow.serverConfig.betaDomain=beta
-spring.data.redis.host=47.97.21.2:7011,121.43.120.18:7011,120.26.101.242:7011
+spring.data.redis.cluster.nodes= 47.97.21.2:7011,121.43.120.18:7011,120.26.101.242:7011
 spring.data.redis.password=aflowredis123!@#
 spring.datasource.url: jdbc:mysql://rm-bp14nh5452l0c2fo7bo.mysql.rds.aliyuncs.com:33006/a_sys
 spring.datasource.username: aflow_ddl
