--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,12 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 replay_pid*
+
+
+### Mac OS ###
+.DS_Store
+/aflow-demo/CATALINA_BASE_IS_UNDEFINED/
+/aflow-demo/log.path_IS_UNDEFINED/
+*/bin
+/aflow-demo/bin/
+/CATALINA_BASE_IS_UNDEFINED/
