--- a/src/main/resources.prod/application.properties
+++ b/src/main/resources.prod/application.properties
@@ -2,17 +2,15 @@ server.port=8082
 spring.application.name=product
 
 #enterprise info
-a.flow.enterpriseCode=aflow
-a.flow.appId=aflow
-a.flow.appSecret=FkD58UP2noEEyUMcY68JlgZUbtgkNFa1
+a.flow.enterpriseCode=100026
+a.flow.appId=wxf9fc6b9ed7aa393a
+a.flow.appSecret=_8jQJNvJgjykjo2qrHP80BEKwKmFSdYefCLEGQpu2j8
 a.flow.environmentType=prod
 
 #server
-a.flow.serverConfig.prodDomain=http://api.beta.aiflow.fan
-a.flow.serverConfig.prodBackDomain=http://api.beta.aiflow.fan
-a.flow.serverConfig.betaDomain=http://api.beta.aiflow.fan
-
-
+a.flow.serverConfig.prodDomain=https://api.aiflow.fans
+a.flow.serverConfig.prodBackDomain=https://api.aiflow.fans
+a.flow.serverConfig.betaDomain=https://api.aiflow.fans
 spring.datasource.url: jdbc:mysql://rm-bp14nh5452l0c2fo7bo.mysql.rds.aliyuncs.com:33006/aflow_demo
 spring.datasource.username: aflow_demo
 spring.datasource.password: Aflowdemo389#
