--- a/src/main/resources.dev/application.properties
+++ b/src/main/resources.dev/application.properties
@@ -12,12 +12,12 @@ a.flow.serverConfig.prodDomain=http://api.beta.aiflow.fan
 a.flow.serverConfig.prodBackDomain=http://api.beta.aiflow.fan
 a.flow.serverConfig.betaDomain=http://api.beta.aiflow.fan
 
-
-spring.datasource.url: jdbc:mysql://rm-bp14nh5452l0c2fo7bo.mysql.rds.aliyuncs.com:33006/aflow_demo
+spring.datasource.url: jdbc:mysql://rm-bp14nh5452l0c2fo7.mysql.rds.aliyuncs.com:33006/aflow_demo
 spring.datasource.username: aflow_demo
 spring.datasource.password: Aflowdemo389#
 spring.datasource.driver-class-name: com.mysql.cj.jdbc.Driver
 logging.level.org.springframework.context=DEBUG
-
 #??????
 com.aflow.mq.message.Message.durable=false
+spring.redis.ssl=false
+spring.redis.lettuce.ssl=false
